[package]
name = "rust-githubrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
#reqwest = "0.11.22"
tokio = { version = "1.35.1", features = ["full"] }
gh_svc = {path = "gh_svc"}
extend = "1.2.0"
futures = "0.3.29"
rayon = "1.8.0"
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["rc"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
tower = "0.4.13"
serde_json = "1.0.108"

[workspace]
members = [
    "gh_svc",
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
