[package]
name = "gh_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.33.1"
rayon = "1.8.1"
futures = "0.3.30"
anyhow = "1.0.79"
thiserror = "1.0.56"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
